# lliurex-sddm-theme

./: CMakeLists.txt  Makefile
conf/: 80-lliurex-desktop.conf  80-lliurex.conf  85-lliurex-classroom.conf  86-lliurex-server.conf
debian/: changelog  control  copyright  lliurex-classroom-sddm-theme.dirs  lliurex-classroom-sddm-theme.install  lliurex-desktop-sddm-theme.dirs  lliurex-desktop-sddm-theme.install  lliurex-desktop-sddm-theme.pofiles  lliurex-sddm-live-theme.install  lliurex-sddm-theme.install  lliurex-server-sddm-theme.dirs  lliurex-server-sddm-theme.install  rules
lliurex/: Main.qml  metadata.desktop  theme.conf
lliurex-classroom/: metadata.desktop  theme.conf
lliurex-desktop/: Main.qml  perlin.js  theme.conf
lliurex-desktop/ui/: Button.qml  UserGrid.qml  UserSlot.qml
lliurex-live/: Main.qml  metadata.desktop  theme.conf
lliurex-po/lliurex-sddm/: ca@valencia.po  es.po  messages.pot
lliurex-po/lliurex-sddm-theme/: es.po
lliurex-server/: metadata.desktop  theme.conf
lliurex/ui/: FancyButton.qml  StatusLine.qml  UserGrid.qml  UserSlot.qml  Window.qml
locale/: ca@valencia.po  es.po  messages.pot
locale-plugin/: CMakeLists.txt  plugin.cpp  plugin.h  qmldir
noise-plugin/: CMakeLists.txt  noise.cpp  noise.h  plugin.cpp  plugin.h  qmldir
sddm.service.d/: 10-lliurex-n4d.conf
tags-plugin/: CMakeLists.txt  plugin.cpp  plugin.h  qmldir
